--- a/소통협력센터/html/communication/notice_view.html
+++ b/소통협력센터/html/communication/notice_view.html
@@ -173,7 +173,7 @@
 				<div class="contents">
 					<div class="inner"> 
 						 <div class="view-head">
-							 <h3><mark class="labelv-n">공지사항</mark> [기획형 리빙랩] 엔도르핀 도는 홀로서기 수업</h3>
+							 <h3><mark class="labelv-n">공지사항</mark> <span>[기획형 리빙랩] 엔도르핀 도는 홀로서기 수업</span></h3>
 							<div class="date-wrap">
 								<span>2020.10.11</span>
 								<span>조회수 <em>90</em></span>
@@ -276,10 +276,10 @@
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
 					<p class="text-wrap"><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
+					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span><span>E-MAIL : jejust@gmail.com</span></p>
 					<p class="text-wrap"><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
 					<p class="text-wrap">Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
-				</div>
+				</div> 
 			</div>
 
 			 
