--- a/소통협력센터/html/communication/press_list.html
+++ b/소통협력센터/html/communication/press_list.html
@@ -373,6 +373,11 @@
 							<a href="#none" class="btn-page btn-last"><i class="icon-nav-last">마지막</i></a>
 						</div>
 
+						<!-- [모바일]-->
+						<div class="btn-page-wrap">
+							<button type="button" class="btn-more"><i>더보기</i></button>
+						</div>
+
 					
 					</div>
 				</div> 
@@ -414,10 +419,10 @@
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
 					<p class="text-wrap"><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
+					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span><span>E-MAIL : jejust@gmail.com</span></p>
 					<p class="text-wrap"><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
 					<p class="text-wrap">Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
-				</div>
+				</div> 
 			</div>
 
 			 
