--- a/소통협력센터/html/index.html
+++ b/소통협력센터/html/index.html
@@ -403,7 +403,7 @@
 				<div class="newsletter-wrap">
 					<div class="inner">
 						<span class="btn-newslette"><a href="#none"><i class="hidden">News letter</i>지난 뉴스레터 보기</a></span>
-						<span class="btn-newslette"><a href="#none"><i class="hidden">News letter</i>뉴스레터 구독하기</a></span>
+						<span class="btn-newslette-s"><a href="#none"><i class="hidden">News letter</i>뉴스레터 구독하기</a></span>
 					</div>
 				</div>
 
@@ -444,11 +444,11 @@
 			<div class="foot-info">
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
-					<p><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
-					<p><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
-					<p>Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
-				</div>
+					<p class="text-wrap"><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
+					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span><span>E-MAIL : jejust@gmail.com</span></p>
+					<p class="text-wrap"><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
+					<p class="text-wrap">Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
+				</div> 
 			</div>
 
 			 
@@ -500,7 +500,7 @@
 			},
 			breakpoints: {
 				961: {
-					slidesPerView: 1,
+					slidesPerView: 2,
 					spaceBetween: 20,
 				},
 				1000: {
@@ -519,7 +519,7 @@
 			 
 		}); 
 
-		//참여와 소식
+		//혁신카드
 		var swiper = new Swiper('.card-swiper', {
 			// slidesPerView: 4,
 			// spaceBetween: 20, 
