--- a/소통협력센터/publishing_list.html
+++ b/소통협력센터/publishing_list.html
@@ -228,7 +228,7 @@
 				<td class="dep2">프로그램</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/program/program_list.html" target="_blank">program_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -239,7 +239,7 @@
 				<td class="link"><a href="html/program/program_search.html" target="_blank">program_search.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -248,7 +248,7 @@
 				<td class="link"><a href="html/program/program_view.html" target="_blank">program_view.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -257,14 +257,14 @@
 				<td class="link"><a href="html/program/program_write.html" target="_blank">program_write.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2">공모사업</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/program/business_list.html" target="_blank">business_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -275,7 +275,7 @@
 				<td class="link"><a href="html/program/business_search.html" target="_blank">business_search.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -284,7 +284,7 @@
 				<td class="link"><a href="html/program/business_view.html" target="_blank">business_view.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -293,7 +293,7 @@
 				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
 				<td class="finishD"><span class="ico none">2020.11.30</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">모바일 디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -302,7 +302,7 @@
 				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
 				<td class="finishD"><span class="ico none">2020.11.30</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">디자인 필요</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -311,7 +311,7 @@
 				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
 				<td class="finishD"><span class="ico none">2020.11.30</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">디자인 필요</td>
 			</tr>
 
 			<!-- 마이페이지 -->
@@ -543,7 +543,7 @@
 				<td class="dep2">공지사항</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/communication/notice_list.html" target="_blank">notice_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -552,7 +552,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/communication/notice_view.html" target="_blank">notice_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -561,7 +561,7 @@
 				<td class="dep2">현장리뷰</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/communication/blog_list.html" target="_blank">blog_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -570,7 +570,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/communication/blog_view.html" target="_blank">blog_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -579,16 +579,16 @@
 				<td class="dep2"></td>
 				<td class="dep3">검색결과</td>
 				<td class="link"><a href="html/communication/blog_search.html" target="_blank">blog_search.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico ing">2020.12.02</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">검색결과 모바일 디자인 필요</td>
 			</tr> 
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2">언론보도</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/communication/press_list.html" target="_blank">press_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -597,7 +597,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/communication/press_view.html" target="_blank">press_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -606,7 +606,7 @@
 				<td class="dep2">지역혁신소식</td>
 				<td class="dep3">목록</td>
 				<td class="link"><a href="html/communication/news_list.html" target="_blank">news_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -615,7 +615,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/communication/news_list.html" target="_blank">news_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.02</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -626,7 +626,7 @@
 				<td class="link"><a href="html/communication/newsletter_list.html" target="_blank">newsletter_list.html</a></td>
 				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
 				<td class="editD"></td>
-				<td class="memo"></td>
+				<td class="memo">수정디자인 필요</td>
 			</tr>
 		 
 
