--- a/소통협력센터/html/inc/footer.html
+++ b/소통협력센터/html/inc/footer.html
@@ -52,10 +52,10 @@
 			<div class="foot-info">
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
-					<p><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
-					<p><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
-					<p>Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
+					<p class="text-wrap"><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
+					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span><span>E-MAIL : jejust@gmail.com</span></p>
+					<p class="text-wrap"><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
+					<p class="text-wrap">Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p> 
 				</div>
 			</div>
 
