소통센터 작업중

--- a/소통협력센터/html/common/Info.html
+++ b/소통협력센터/html/common/Info.html
@@ -187,9 +187,9 @@
 								<dd><input type="text" id="name" class="wid50" placeholder="한글, 영문만 입력가능"></dd>
 								<dt><label for="phone">전화번호<strong class="ico-st">*<i class="hidden">필수항목</i></strong></label></dt>
 								<dd>
-									<input type="tel" id="phone" class="wid13"> -
-									<input type="tel" id="phone" class="wid13"> -
-									<input type="tel" id="phone" class="wid13">
+									<input type="tel" id="phone" class="wid13" title="전화번호 앞자리"> -
+									<input type="tel" class="wid13" title="전화번호 가운데 자리"> -
+									<input type="tel" class="wid13" title="전화번호 뒷자리">
 								</dd>
 							</dl>
 						</div> 
