--- a/소통협력센터/html/common/login.html
+++ b/소통협력센터/html/common/login.html
@@ -155,7 +155,7 @@
 
 		<!-- container -->
 		<div class="container">
-			<main class="pg-sub">  
+			<main class="pg-sub login">  
 				<div class="tit-wrap">
 					<div class="inner">
 						<h2>로그인</h2>
