--- a/소통협력센터/html/common/terms_use.html
+++ b/소통협력센터/html/common/terms_use.html
@@ -198,7 +198,7 @@
 							</ol>
 						</div>
 
-						<div class="btn-wrap"> 
+						<div class="btn-wrap terms"> 
 							<button type="button" class="btn-comm red"><i>메인으로 이동</i></button>
 						</div> 
 					</div>
