--- a/소통협력센터/html/common/terms_use01.html
+++ b/소통협력센터/html/common/terms_use01.html
@@ -183,7 +183,7 @@
 							<p>개인정보 처리방침은 다음과 같은 내용을 담고 있습니다.</p>  
 						</div>
 
-						<div class="btn-wrap"> 
+						<div class="btn-wrap terms"> 
 							<button type="button" class="btn-comm red"><i>메인으로 이동</i></button>
 						</div> 
 					</div>
