--- a/소통협력센터/html/program/business_view.html
+++ b/소통협력센터/html/program/business_view.html
@@ -170,18 +170,21 @@
 					</div>
 				</div>
 				
-				<div class="contents">
+				<div class="contents  business">
 					<div class="inner"> 
-						<div class="view-head-wrap">
-							<div class="img-area">
-								<em><img src="../../resource/img/@img19.png" alt=""></em> 
-							</div>
+						<div class="view-head-wrap"> 
 							<div class="view-head">
-								<h3>OO으로 만난사이_제주 원도심 문화와 여행 과 아티스트 거리만들기 모</h3>
-								<div class="share-wrap">
-									<button type="button" class="btn-share">공유</button>
-									<button type="button" class="btn-print">인쇄</button>
-									<button type="button" class="btn-link">링크복사</button>
+								<div class="tit-area">
+									<h3>OO으로 만난사이_제주 원도심 문화와 여행 과 아티스트 거리만들기 모임</h3>
+									<div class="share-wrap">
+										<button type="button" class="btn-share">공유</button>
+										<button type="button" class="btn-print">인쇄</button>
+										<button type="button" class="btn-link">링크복사</button>
+									</div>
+								</div>
+
+								<div class="img-area">
+									<em><img src="../../resource/img/@img19.png" alt=""></em>
 								</div>
 
 								<div class="state-list">
@@ -204,14 +207,11 @@
 										</li> 
 									</ul>
 									<p class="state end">
-										<i>현재 신청이 가능한<br>
-										프로그램입니다.</i>
+										<i>본 공모사업은 신청이<br>
+										마감되었습니다.</i>
 									</p>
 								</div> 
-							</div>
-							<div class="btn-wrap"> 
-								<a href="#none" class="btn-comm"><i>목록으로</i></a>
-							</div>
+							</div> 
 						</div>
 						  
 
@@ -219,8 +219,11 @@
 							<div class="view-cont"> 
 								<p class="img"><img src="../../resource/img/@img20.png" alt=""></p> 
 							</div>  
-						</div> 
- 
+							<div class="btn-wrap program">
+								<button type="button" class="btn-comm red"><i>신청하기</i></button>
+								<a href="#none" class="btn-comm"><i>목록으로</i></a>
+							</div>
+						</div>  
 					</div>
 				</div> 
 			</main>
