--- a/소통협력센터/html/program/program_search.html
+++ b/소통협력센터/html/program/program_search.html
@@ -179,7 +179,7 @@
 									<option value="">전체기간</option>
 								</select>
 							</div>
-							<div class="search-form">
+							<div class="search-form program">
 								<label for="search-inp" class="hidden">검색</label>
 								<input type="text" id="search-inp" placeholder="검색할 프로그램명을 입력하세요.">
 								<button type="button"><i>검색</i></button>
@@ -231,6 +231,11 @@
 							</span>
 							<a href="#none" class="btn-page btn-next"><i class="icon-nav-next">다음</i></a>
 							<a href="#none" class="btn-page btn-last"><i class="icon-nav-last">마지막</i></a>
+						</div>
+
+						<!-- [모바일]-->
+						<div class="btn-page-wrap">
+							<button type="button" class="btn-more"><i>더보기</i></button>
 						</div>
 
 					
