--- a/소통협력센터/html/program/program_write.html
+++ b/소통협력센터/html/program/program_write.html
@@ -175,17 +175,17 @@
 						<h3>신청 프로그램 정보</h3> 
 						<div class="report-write">
 							<dl class="viwe-type"> 
-								<dt>프로그램명</dt>
+								<dt><span>프로그램명</span></dt>
 								<dd><span>제주생활공론 가장 작은 캠페인</span></dd>
-								<dt>신청 기간</dt>
+								<dt><span>신청 기간</span></dt>
 								<dd><span>2020.10.26(월) ~ 2020.11.16(월) 18:00</span></dd>
-								<dt>운영 기간</dt>
+								<dt><span>운영 기간</span></dt>
 								<dd><span>2020.11.30(월) ~ 2020.12.31(목)</span></dd>
-								<dt>장소</dt>
+								<dt><span>장소</span></dt>
 								<dd><span>제주시 소통협력센터 3F</span></dd>
-								<dt>주소</dt>
+								<dt><span>주소</span></dt>
 								<dd><span>제주특별자치도 제주시 관덕로 44 3층</span></dd>
-								<dt>문의처</dt>
+								<dt><span>문의처</span></dt>
 								<dd><span>064-000-0000</span></dd>
 							</dl>
 						</div> 
@@ -199,9 +199,9 @@
 								<dd><input type="text" id="pass02" class="wid50"></dd>
 								<dt><label for="phone">전화번호</label></dt>
 								<dd>
-									<input type="tel" id="phone" class="wid13"> -
-									<input type="tel" id="phone" class="wid13"> -
-									<input type="tel" id="phone" class="wid13">
+									<input type="tel" id="phone" class="wid13" title="전화번호 앞자리"> -
+									<input type="tel" class="wid13" title="전화번호 가운데 자리"> -
+									<input type="tel" class="wid13" title="전화번호 뒷자리">
 								</dd>
 								<dt><label for="phone">유입경로</label></dt>
 								<dd>
