--- a/소통협력센터/publishing_list.html
+++ b/소통협력센터/publishing_list.html
@@ -83,7 +83,7 @@
 				<td class="dep2">공통레이아웃</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/inc/layout.html" target="_blank">layout.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -92,7 +92,7 @@
 				<td class="dep2">본문내용 바로가기</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/inc/skipnavi.html" target="_blank">skipnavi.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -101,7 +101,7 @@
 				<td class="dep2">헤더</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/inc/header.html" target="_blank">header.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -110,7 +110,7 @@
 				<td class="dep2">푸터</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/inc/footer.html" target="_blank">footer.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -127,8 +127,8 @@
 				<td class="dep1"></td>
 				<td class="dep2">전체 검색(검색 결과 랜딩 페이지)</td>
 				<td class="dep3"></td>
-				<td class="link"><a href="html/common/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/common/search_result.html" target="_blank">search_result.html</a></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -137,7 +137,7 @@
 				<td class="dep2">비밀번호 찾기</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/common/password.html" target="_blank">password.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -146,7 +146,7 @@
 				<td class="dep2">로그인</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/common/login.html" target="_blank">login.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -155,7 +155,7 @@
 				<td class="dep2">회원가입</td>
 				<td class="dep3">약관동의</td>
 				<td class="link"><a href="html/common/agree.html" target="_blank">agree.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -164,7 +164,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">회원정보 입력</td>
 				<td class="link"><a href="html/common/info.html" target="_blank">info.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -173,7 +173,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">이용약관</td>
 				<td class="link"><a href="html/common/terms_use.html" target="_blank">terms_use.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -182,7 +182,7 @@
 				<td class="dep2"></td>
 				<td class="dep3">개인정보 처리방침</td>
 				<td class="link"><a href="html/common/terms_use01.html" target="_blank">terms_use01.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr> 
@@ -191,7 +191,7 @@
 				<td class="dep2">지역혁신 사례제보</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/common/report_write.html" target="_blank">report_write.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -237,27 +237,27 @@
 				<td class="dep2"></td>
 				<td class="dep3">프로그램 검색</td>
 				<td class="link"><a href="html/program/program_search.html" target="_blank">program_search.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"></td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
-				<td class="dep2"></td>
+				<td class="dep2"></td> 
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/program/program_view.html" target="_blank">program_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"></td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">신청</td>
 				<td class="link"><a href="html/program/program_write.html" target="_blank">program_write.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"> </td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
@@ -273,34 +273,34 @@
 				<td class="dep2"></td>
 				<td class="dep3">공모사업 검색</td>
 				<td class="link"><a href="html/program/business_search.html" target="_blank">business_search.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"></td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
 				<td class="link"><a href="html/program/business_view.html" target="_blank">business_view.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"</td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">신청하기 1단계 (신청자개요입력)</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_write.html" target="_blank">business_write.html</a></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">모바일 디자인 필요</td>
+				<td class="memo"></td>
 			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">신청하기 2단계 (계획안작성)</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_write1.html" target="_blank">business_write1.html</a></td>
+				<td class="finishD"><span class="ico none">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo">디자인 필요</td>
 			</tr>
@@ -308,8 +308,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">신청하기 3단계 (개인정보수집및사용동의)</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_write2.html" target="_blank">business_write2.html</a></td>
+				<td class="finishD"><span class="ico none">2020.12.05</span></td>
 				<td class="editD"></td>
 				<td class="memo">디자인 필요</td>
 			</tr>
@@ -579,9 +579,9 @@
 				<td class="dep2"></td>
 				<td class="dep3">검색결과</td>
 				<td class="link"><a href="html/communication/blog_search.html" target="_blank">blog_search.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.12.02</span></td>
+				<td class="finishD"><span class="ico done">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">검색결과 모바일 디자인 필요</td>
+				<td class="memo"></td>
 			</tr> 
 			<tr>
 				<td class="dep1"></td>
@@ -624,9 +624,9 @@
 				<td class="dep2">뉴스레터</td>
 				<td class="dep3"></td>
 				<td class="link"><a href="html/communication/newsletter_list.html" target="_blank">newsletter_list.html</a></td>
-				<td class="finishD"><span class="ico ing">2020.11.30</span></td>
+				<td class="finishD"><span class="ico ing">2020.12.05</span></td>
 				<td class="editD"></td>
-				<td class="memo">수정디자인 필요</td>
+				<td class="memo">pc화면 수정 디자인 필요</td>
 			</tr>
 		 
 
