--- a/소통협력센터/html/common/agree.html
+++ b/소통협력센터/html/common/agree.html
@@ -208,7 +208,7 @@
 							</div>
 						</div>
 
-						<div class="btn-wrap"> 
+						<div class="btn-wrap terms"> 
 							<button type="button" class="btn-comm red"><i>회원가입</i></button>
 						</div> 
 					</div>
