--- a/DX-Portal/publishing_list.html
+++ b/DX-Portal/publishing_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<title> HTML Files</title>
+	<title> HTML Files2</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=1280">
@@ -22,7 +22,7 @@
 			<ul class="currentState">
 				<li class="total" title=".total">
 					<strong>총계</strong>
-					<div><em>000</em> <span id="totalRate">100%</span></div>
+					<div><em>000 </em> <span id="totalRate">100%</span></div>
 				</li>
 				<li class="none" title=".none">
 					<strong>미진행</strong>
