코딩리스트

--- a/DX-Portal/publishing_list.html
+++ b/DX-Portal/publishing_list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<title> HTML Files3</title>
+	<title> HTML Files3g</title>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=1280">
-	<link rel="stylesheet" type="text/css" href="_guide/guide.css">
-	<script type="text/javascript" src="_guide/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="_guide/fileList_new.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://noheunmyoung.github.io/gitworks/blob/master/DX-Portal/_guide/guide.css">
+	<script type="text/javascript" src="https://noheunmyoung.github.io/gitworks/blob/master/DX-Portal/_guide/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="https://noheunmyoung.github.io/gitworks/blob/master/DX-Portal/_guide/fileList_new.js"></script>
 </head>
 
 <body class="htmlList">
